# protobuf-mercury

./: COPYING  Make.common.in  Makefile.am  README  README.md  configure.ac
mercury/: Makefile  protobuf_runtime.m
samples/: Makefile  README  person.proto  writeread_bitmap.m
src/: Makefile.am
src/google/protobuf/compiler/mercury/: main.cc  mercury_generator.cc  mercury_generator.h  mercury_strutil.cc  mercury_strutil.h
tests/: Makefile  Mercury.options  README  defaults.cppexp  defaults.defexp  defaults.inp  defaults.mexp  defaults.proto  defaults.type  embedded.cppexp  embedded.inp  embedded.mexp  embedded.proto  field_key.cppexp  field_key.inp  field_key.proto  mreader_template  mwriter_template  pprinter_template  read_defaults.m  runtest  runtests  test_bytes.inp  test_bytes.mexp  test_bytes.proto  test_bytes.type  test_double.cppexp  test_double.inp  test_double.proto  test_double.type  test_enum.cppexp  test_enum.inp  test_int32.inp  test_sfixed32.cppexp  test_sfixed32.inp  test_sfixed32.type  test_sint32.cppexp  test_sint32.inp  test_sint32.proto  test_string.cppexp
trunk/: Makefile.am  README  configure.ac
trunk/mercury/: protobuf_runtime.m
trunk/samples/: Makefile  writeread_person.m
trunk/src/: Makefile.am
trunk/src/google/protobuf/compiler/mercury/: mercury_generator.cc  mercury_generator.h  mercury_strutil.h
trunk/tests/: Makefile  cppreader_template  dup_test  embedded.type  field_key.proto  field_key.type  mreader_template  mwriter_template  runtest  test_bytes.cppexp  test_bytes.proto  test_enum.inp  test_enum.proto  test_enum.type  test_int32.proto  test_int32.type  test_sfixed32.inp  test_sfixed32.proto  test_sint32.inp  test_sint32.type  test_string.inp  test_string.proto  test_string.type
